--- a/client/views/frontPage.ejs
+++ b/client/views/frontPage.ejs
@@ -4,7 +4,7 @@
   
   <div align="center">
     </br>
-    <img src="http://www.picresize.com/images/rsz_logo.png" >
+    <img src="img/Logo.png" >
     </br></br></br></br>
     <form class="form-sign-in">
       <div>
