--- a/client/views/order.ejs
+++ b/client/views/order.ejs
@@ -8,34 +8,32 @@
   </head>
 
   
-  <body align="center" class="span6" onload="displayAddresses()" style="background-color:#A40004">
+  <body onload="displayAddresses()" style="background-color:#A40004">
 <style>
     .hidden { display: none; }
     .popup {position: absolute; top:0px; left: 0px; height:500px; background-color:rgba(255,255,255,0.4);}
   </style>
-  
-    <div align="center" class="container span6">
-    </div>
 
-    <div align="center" class="container span6">
+    <div>
       <div id="orderPopUp" class = "hidden popup span6"></br></br></br></br></br></br>
-    <p><a href="#" class="btn btn-large btn-warning" onclick="continueOn()">Purchase</a></p>
-    <font color="black"><strong><p id="dishname"></p>
-    <p id="restaurant"></p>
-    <p id="totalprice"></p></strong></font>
-    <div align="center">
-          <button type="button" class="btn btn-large btn-danger" onclick="backToMenu()">Go Back</a>
-          <button type="button" class="btn btn-large btn-success offset1" onclick="showMeal()">Try Again</a>
+        <p><a href="#" class="btn btn-large btn-warning" onclick="continueOn()">Purchase</a></p>
+        <font color="black"><strong><p id="dishname"></p>
+        <p id="restaurant"></p>
+        <p id="totalprice"></p></strong></font>
+      <div align="center">
+        <button type="button" class="btn btn-large btn-danger" onclick="backToMenu()">Go Back</a>
+        <button type="button" class="btn btn-large btn-success offset1" onclick="showMeal()">Try Again</a>
+      </div>
+    </div>
+    
+    <div class="page-header" align="center">
+      <h1><img src="http://i.picresize.com/images/2013/11/09/L0awx.png"/> <font color="white">Choose Your Fate</font> <a href="settings">
+        <img src="http://www.clker.com/cliparts/j/V/R/4/3/s/cog-cogwheel-gear-zahnrad-md.png" height="20" width="20" class="img-responsive" alt="Responsive image">
+      </a></h1>
     </div>
 
-  </div>
-      <div class="page-header">
-        <h1><img src="http://i.picresize.com/images/2013/11/09/L0awx.png"/> <font color="white">Choose Your Fate</font> <a href="settings">
-          <img src="http://www.clker.com/cliparts/j/V/R/4/3/s/cog-cogwheel-gear-zahnrad-md.png" height="20" width="20" align="right" class="img-responsive" alt="Responsive image">
-        </a></h1>
-      </div>
-    <div id="mainMenu">  
-      <div align="center" class="container span6">
+    <div id="mainMenu" align="center">  
+      <div>
        <select id = "addressList" onchange="selectCurrentAddress()">
        </select>
       </div>
@@ -57,7 +55,7 @@
         </script>
       </h1>
       <span style="white-space:nowrap">
-        <div align="center">
+        <div>
           <a href="#" class="btn btn-large btn-info" onclick="maniaTime()"><font color="red"> MANIA </font></a>
           <a href="#" class="btn btn-large btn-success offset1" onclick="orderPopup(); lameTime(); showMeal()">GO</a>
           <script>
