--- a/client/views/finish.ejs
+++ b/client/views/finish.ejs
@@ -25,7 +25,7 @@
       <h3 id="rphone"> </h3>
       <h3 id="dish"> </h3>
       <h3 id="price"></h3>
-
+      <select id="details"></select>
       <form id = "approval" align="center" action ="order">
         <div>
           <input type="image" src = "http://upload.wikimedia.org/wikipedia/commons/1/13/Facebook_like_thumb.png" height="50" width="50" onclick="like()">
