--- a/client/views/frontPage.ejs
+++ b/client/views/frontPage.ejs
@@ -1,6 +1,6 @@
 <%= include header %>
 
-<body style="background-color:#FFFFFF" onload="redirect()">
+<body style="background-color:#FFFFFF">
   
   <div align="center">
     </br>
@@ -20,10 +20,6 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
   </script>
     <script>
-      function redirect()
-      {
-        var logged-in
-      }
       var base_url = "http://ec2-54-200-88-29.us-west-2.compute.amazonaws.com:8080/";
       form = document.getElementById("loginForm");
       function login() {
