--- a/client/views/order.ejs
+++ b/client/views/order.ejs
@@ -1,68 +1,80 @@
 <%= include header %>
-  
+
   <body onload="displayAddresses()" style="background-color:#A40004">
-<style>
+  <style>
     .hidden { display: none; }
-    .popup {position: absolute; top:0px; left: 0px; height:500px; background-color:rgba(255,255,255,0.4);}
+    .popup {position: absolute; align:"center"}
   </style>
 
-    <div>
-      <div id="orderPopUp" class = "hidden popup span6"></br></br></br></br></br></br>
-        <p><a href="#" class="btn btn-large btn-warning" onclick="continueOn()">Purchase</a></p>
-        <font color="black"><strong><p id="dishname"></p>
-        <p id="restaurant"></p>
-        <p id="totalprice"></p></strong></font>
-      <div align="center">
-        <button type="button" class="btn btn-large btn-danger" onclick="backToMenu()">Go Back</a>
-        <button type="button" class="btn btn-large btn-success offset1" onclick="showMeal()">Try Again</a>
-      </div>
-    </div>
     
     <div class="page-header" align="center">
-      <h1><img src="img/Logo.png"/><a href="settings">
+      <h1><img src="../public/img/Logo.png"/><a href="settings">
         <!-- <img src="http://www.clker.com/cliparts/j/V/R/4/3/s/cog-cogwheel-gear-zahnrad-md.png" height="20" width="20" class="img-responsive" alt="Responsive image"> -->
       </a></h1>
     </div>
-
-    <div id="mainMenu" align="center">  
-      <div>
+  <div align="center">  
+    <div>
        <select id = "addressList" onchange="selectCurrentAddress()">
           <option>Home</option>
        </select>
-      </div>
+    </div>
       
       <div>
         <font color="white">Maximum Willing to Pay</font>
       </div>
       <div>
         <input type=range id='priceslider' min=5 max=50 value=25 step=1 onchange="outputUpdate(value)">
-      </div>
-      <h1>
-        <font color="white">$</font>
-        <output id=price><font size="7" color="white">25</font></output>
-        <script>
 
-          function outputUpdate(price) {
-          document.querySelector('#price').value = price;
-          }
-        </script>
-      </h1>
-      <span style="white-space:nowrap">
+      </div>
+      <h1 id="priceDIV">
+        <font color="white">$</font>
+        <output id="price" style="color:white; font-size:50px">25</output>
+        
+        <span style="white-space:nowrap">
         <div>
           <a href="#" class="btn btn-large btn-default" onclick="orderPopup(); lameTime(); showMeal()">Suggest</a>
           <a href="#" class="btn btn-large btn-success" onclick="maniaTime()">MANIA</a>
+        </div>
+        </span>
+      </h1>
+
+      <div>
+          <div id="orderPopUp" class = "hidden">
+            </br>
+            <font color="white" size="7"><strong><p id="dishname">FOOD</p>
+            </br>
+            <p id="restaurant">REST</p>
+            </br>
+            <p id="totalprice">PAY</p></strong></font>
+          <span style="white-space:nowrap">
+            <div>
+              <a href="#" class="btn btn-large btn-default" onclick="orderPopup(); lameTime(); showMeal()">Suggest</a>
+              <a href="#" class="btn btn-large btn-success" onclick="continueOn();">Purchase</a>
+            </div>
+          </span>
+        </div>
+      </div>
+    </div>
+
+  </div>
+    <script>
+          function outputUpdate(price) {
+            document.querySelector('#price').value = price;
+            backToMenu();
+          }
+        </script>
           <script>
           function orderPopup()
               {
                 $(function () {
                    $('#orderPopUp').removeClass('hidden');
-                   $('#mainMenu').addClass('hidden');
+                   $('#priceDIV').addClass('hidden');
                 });
               }
             function backToMenu()
               {
                 $(function () {
-                   $('#mainMenu').removeClass('hidden');
+                   $('#priceDIV').removeClass('hidden');
                    $('#orderPopUp').addClass('hidden');
                 });
               }
@@ -124,11 +136,4 @@
               window.location="finish";
             }
           </script>
-        </div>
-      </span>
-      </div>
-    </div>
-        <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="../public/js/bootstrap.js"></script>
-  </body>
-</html>
+<%= include footer %>
