--- a/client/views/finish.ejs
+++ b/client/views/finish.ejs
@@ -1,30 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Header</title>
-    <link rel="stylesheet" type="text/css" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css"></link>
-    <!--<link href="grid.css" rel="stylesheet">-->
-    
-  </head>
+<%= include header %>
 
-  <body align="center" class="span6" onload="display(); quotePicker()">
 
-    <div align="center" class="container span6">
+  <body style="background-color:#A40004" onload="display(); quotePicker()">
+
+    <div align="center" class="container">
+      <div class="page-header" align="center">
+      <h1><img src="../public/img/Logo.png"/><a href="settings">
+        <!-- <img src="http://www.clker.com/cliparts/j/V/R/4/3/s/cog-cogwheel-gear-zahnrad-md.png" height="20" width="20" class="img-responsive" alt="Responsive image"> -->
+      </a></h1>
     </div>
 
-    <div align="center" class="container span6">
-      <div class="page-header">
-        <h1><img src="http://i.picresize.com/images/2013/11/09/L0awx.png"/> Meal Maniac <a href="settings">
-          <img src="http://files.softicons.com/download/system-icons/web0.2ama-icons-by-chrfb/png/96x96/Settings.png" height="20" width="20" align="right" class="img-responsive" alt="Responsive image">
-        </a></h1>
-      </div>
-
+      <font color="white">
       <h1 id="quote">  </h1>
       <h3 id="rname"></h2>
       <h3 id="rphone"> </h3>
       <h3 id="dish"> </h3>
       <h3 id="price"></h3>
+      </font>
+
       <select id="details"></select>
       <form id = "approval" align="center" action ="order">
         <div>
@@ -33,6 +26,7 @@
         </div>
       </form>
     </div>    
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script >
       function display() {
@@ -75,6 +69,5 @@
       function dislike() {
         //Do something. Lower priority.
       }
-    </script>
-  </body>
-</html>
+      </script>
+<%= include footer %>
