--- a/client/views/header.ejs
+++ b/client/views/header.ejs
@@ -4,6 +4,14 @@
     <meta charset="utf-8">
     <title>Header</title>
     <link rel="stylesheet" type="text/css" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css"></link>
-    <link rel="stylesheet" type="text/css" href="http://bootswatch.com/assets/css/bootswatch.min.css"></link>
     <!--<link href="grid.css" rel="stylesheet">-->
+    <style>
+      table, td, th
+      {
+      background-color:#C0C0C0;
+      color:black;
+      }
+      .hidden { display: none; }
+      .popup {position: absolute; top:250px; left: 0px; height:500px; width:460px; background-color:rgba(255,255,255,0.5);}
+    </style>
   </head>
