--- a/client/views/finish.ejs
+++ b/client/views/finish.ejs
@@ -5,7 +5,7 @@
 
     <div align="center" class="container">
       <div class="page-header" align="center">
-      <h1><img src="../public/img/Logo.png"/><a href="settings">
+      <h1><img src="mealmaniac.com/img/Logo.png"/><a href="settings">
         <!-- <img src="http://www.clker.com/cliparts/j/V/R/4/3/s/cog-cogwheel-gear-zahnrad-md.png" height="20" width="20" class="img-responsive" alt="Responsive image"> -->
       </a></h1>
     </div>
